--- a/Yufeng_XMLDemo/.project
+++ b/Yufeng_XMLDemo/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Yufeng_XMLDemo</name>
+	<name>Course_XMLDemo</name>
 	<comment></comment>
 	<projects>
 	</projects>
